--- a/test/fixtures/character_classes.yml
+++ b/test/fixtures/character_classes.yml
@@ -1,25 +1,25 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  armor_type: MyString
-  fortitude_index: 1
-  strength_index: 1
-  mana_index: 1
-  swiftness_index: 1
-  intuition_index: 1
-  prestige: false
-  entry_requirements: MyText
-  flavor_text: MyText
-
-two:
-  name: MyString
-  armor_type: MyString
-  fortitude_index: 1
-  strength_index: 1
-  mana_index: 1
-  swiftness_index: 1
-  intuition_index: 1
-  prestige: false
-  entry_requirements: MyText
-  flavor_text: MyText
+# # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+#
+# one:
+#   name: MyString
+#   armor_type: MyString
+#   fortitude_index: 1
+#   strength_index: 1
+#   mana_index: 1
+#   swiftness_index: 1
+#   intuition_index: 1
+#   prestige: false
+#   entry_requirements: MyText
+#   flavor_text: MyText
+#
+# two:
+#   name: MyString
+#   armor_type: MyString
+#   fortitude_index: 1
+#   strength_index: 1
+#   mana_index: 1
+#   swiftness_index: 1
+#   intuition_index: 1
+#   prestige: false
+#   entry_requirements: MyText
+#   flavor_text: MyText
