--- a/test/fixtures/races.yml
+++ b/test/fixtures/races.yml
@@ -1,25 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  plural: MyString
-  singular: MyString
-  adjective: MyString
-  age_of_maturity: 1
-  fortitude_index: 1
-  strength_index: 1
-  mana_index: 1
-  swiftness_index: 1
-  intuition_index: 1
-  description: MyText
-
-two:
-  plural: MyString
-  singular: MyString
-  adjective: MyString
-  age_of_maturity: 1
-  fortitude_index: 1
-  strength_index: 1
-  mana_index: 1
-  swiftness_index: 1
-  intuition_index: 1
-  description: MyText
+# one:
+#   plural: MyString
+#   singular: MyString
+#   adjective: MyString
+#   age_of_maturity: 1
+#   fortitude_index: 1
+#   strength_index: 1
+#   mana_index: 1
+#   swiftness_index: 1
+#   intuition_index: 1
+#   description: MyText
+#
+# two:
+#   plural: MyString
+#   singular: MyString
+#   adjective: MyString
+#   age_of_maturity: 1
+#   fortitude_index: 1
+#   strength_index: 1
+#   mana_index: 1
+#   swiftness_index: 1
+#   intuition_index: 1
+#   description: MyText
