--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -1,27 +1,16 @@
 # # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 #
-# one:
-#   name: MyString
-#   age: 1
-#   race_id: 1
-#   racial_bonus_id: 1
-#   fortitude_offset: 1
-#   strength_offset: 1
-#   mana_offset: 1
-#   swiftness_offset: 1
-#   intuition_offset: 1
-#   campaign_id: 1
-#   player_id: 1
-#
-# two:
-#   name: MyString
-#   age: 1
-#   race_id: 1
-#   racial_bonus_id: 1
-#   fortitude_offset: 1
-#   strength_offset: 1
-#   mana_offset: 1
-#   swiftness_offset: 1
-#   intuition_offset: 1
-#   campaign_id: 1
-#   player_id: 1
+one:
+  name: "Tyrion Wingfury"
+  age: 18
+  race_id: 1
+  racial_bonus_id: 1
+  fortitude_offset: 1
+  strength_offset: 1
+  mana_offset: 1
+  swiftness_offset: 1
+  intuition_offset: 1
+  campaign_id: 1
+  player_id: 1
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
