--- a/test/fixtures/levels.yml
+++ b/test/fixtures/levels.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 zero:
+  id: 1
   character_id: 1
-  class_id: 0
+  class_id: 1
   character_level: 0
   ability_id: 1
   fortitude_increase: 12
@@ -15,14 +16,57 @@ zero:
 
 
 one:
+  id: 2
   character_id: 1
   class_id: 1
   character_level: 1
   ability_id: 2
+  fortitude_increase: 0
+  strength_increase: 0
+  mana_increase: 0
+  swiftness_increase: 0
+  intuition_increase: 0
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
+
+two:
+  id: 3
+  character_id: 1
+  class_id: 1
+  character_level: 2
+  ability_id: 3
   fortitude_increase: 1
-  strength_increase: 1
-  mana_increase: 1
+  strength_increase: 4
+  mana_increase: 3
   swiftness_increase: 1
   intuition_increase: 1
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+three:
+  id: 4
+  character_id: 1
+  class_id: 2
+  character_level: 3
+  ability_id: 4
+  fortitude_increase: 0
+  strength_increase: 2
+  mana_increase: 2
+  swiftness_increase: 1
+  intuition_increase: 0
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
+
+# false:
+#   id: 4
+#   character_id: 1
+#   class_id: 3
+#   character_level: 3
+#   ability_id: 4
+#   fortitude_increase: 0
+#   strength_increase: 2
+#   mana_increase: 2
+#   swiftness_increase: 1
+#   intuition_increase: 0
+#   created_at: "2016-05-12 22:16:59"
+#   updated_at: "2016-05-12 22:16:59"
