--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,6 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
+one:
+  id: 1
+  email: "artburtch@huskers.unl.edu"
+  name: "Art Burtch"
+  salt: <%= salt = "asdasdastr4325234324sdfds" %>
+  crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("password", salt) %>  
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
