--- a/test/fixtures/campaigns.yml
+++ b/test/fixtures/campaigns.yml
@@ -1,11 +1,11 @@
-# # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-#
-# one:
-#   name: MyString
-#   dm_id: 1
-#   description: MyText
-#
-# two:
-#   name: MyString
-#   dm_id: 1
-#   description: MyText
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+one:
+  name: "Sea Campaign"
+  dm_id: 2
+  description: "A group of privateers having various adventures, much to the chagrin of several evil deities."
+
+two:
+  name: "Cormyr Campaign"
+  dm_id: 3
+  description: "A trio of adventurers investigate a reports of a growing cult presence."
