--- a/test/fixtures/character_classes.yml
+++ b/test/fixtures/character_classes.yml
@@ -29,3 +29,16 @@ two:
   flavor_text: nil
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+three:
+  id: 3
+  name: "Mage"
+  armor_type: "Light"
+  fortitude_index: 0
+  strength_index: 0
+  mana_index: 4
+  swiftness_index: 2
+  intuition_index: 2
+  prestige: false
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
