--- a/test/fixtures/characters.yml
+++ b/test/fixtures/characters.yml
@@ -16,3 +16,20 @@ one:
   player_id: 1
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+two:
+  id: 2
+  name: "Darren Wingfury"
+  age: 21
+  race_id: 1
+  racial_bonus_id: 1
+  base_level_id: 5
+  fortitude_offset: 0
+  strength_offset: 0
+  mana_offset: 0
+  swiftness_offset: 0
+  intuition_offset: 0
+  campaign_id: 1
+  player_id: 1
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
