--- a/test/fixtures/races.yml
+++ b/test/fixtures/races.yml
@@ -14,3 +14,18 @@ one:
   description: nil
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+two:
+  id: 2
+  name: "Elves"
+  singular: "Elf"
+  adjective: "Elven"
+  age_of_maturity: 30
+  fortitude_index: -1
+  strength_index: -2
+  mana_index: 0
+  swiftness_index: 2
+  intuition_index: 1
+  description: nil
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
