--- a/test/fixtures/racial_bonuses.yml
+++ b/test/fixtures/racial_bonuses.yml
@@ -9,3 +9,23 @@ one:
   flavor_text: nil
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+two:
+  id: 2
+  name: "Xenophobia"
+  race_id: 1
+  cooldown: "passive"
+  in_game_effect: "Deal more damage to, but recieve less healing from other races."
+  flavor_text: nil
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
+
+three:
+  id: 3
+  name: "Sprint"
+  race_id: 2
+  cooldown: "1 day"
+  in_game_effect: "Increases movement speed and damage taken, but decreases damage dealt for a brief period."
+  flavor_text: nil
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
