--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,6 +5,16 @@ one:
   email: "artburtch@huskers.unl.edu"
   name: "Art Burtch"
   salt: <%= salt = "asdasdastr4325234324sdfds" %>
-  crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("password", salt) %>  
+  crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("password", salt) %>
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
+
+two:
+  id: 2
+  email: "alexrudolph@gmail.com"
+  name: "Alex Rudolph"
+  salt: <%= salt = "asdasdastr4325234324sdfds" %>
+  crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("password", salt) %>
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
+    
