--- a/test/fixtures/abilities.yml
+++ b/test/fixtures/abilities.yml
@@ -1,7 +1,6 @@
 # # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 #
-one:
-  id: 1
+crusader_strike:
   name: "Crusader Strike"
   cooldown: "1 round"
   in_game_effect: "Generates Zeal and strikes the target."
@@ -9,26 +8,30 @@ one:
   updated_at: "2016-05-12 22:16:59"
 
 
-two:
-  id: 2
+smite:
   name: "Smite"
   cooldown: "2 rounds"
   in_game_effect: "Consumes Zeal, smites the target."
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
 
-three:
-  id: 3
+zeal:
   name: "Zeal"
   cooldown: "passive"
   in_game_effect: "Makes you glow."
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
 
-four:
-  id: 4
+charge:
   name: "Charge"
   cooldown: "3 rounds"
   in_game_effect: "Generates Zeal, charges at the target."
+  created_at: "2016-05-12 22:16:59"
+  updated_at: "2016-05-12 22:16:59"
+
+fireball:
+  name: "Fireball"
+  cooldown: "1 rounds"
+  in_game_effect: "Shoots a fireball at the target."
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
