--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  id: 1
+art:
   email: "artburtch@huskers.unl.edu"
   name: "Art Burtch"
   salt: <%= salt = "asdasdastr4325234324sdfds" %>
@@ -9,12 +8,10 @@ one:
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
 
-two:
-  id: 2
+rudolph:
   email: "alexrudolph@gmail.com"
   name: "Alex Rudolph"
   salt: <%= salt = "asdasdastr4325234324sdfds" %>
   crypted_password: <%= Sorcery::CryptoProviders::BCrypt.encrypt("password", salt) %>
   created_at: "2016-05-12 22:16:59"
   updated_at: "2016-05-12 22:16:59"
-    
